--- a/angular/src/app/book/book.component.html
+++ b/angular/src/app/book/book.component.html
@@ -18,6 +18,31 @@
     </div>
     <div class="card-body">
       <ngx-datatable [rows]="book.items" [count]="book.totalCount" [list]="list" default>
+        <ngx-datatable-column
+          [name]="'::Actions' | abpLocalization"
+          [maxWidth]="150"
+          [sortable]="false"
+        >
+          <ng-template let-row="row" ngx-datatable-cell-template>
+            <div ngbDropdown container="body" class="d-inline-block">
+              <button
+                class="btn btn-primary btn-sm dropdown-toggle"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                ngbDropdownToggle>
+                <i class="fa fa-cog mr-1"></i>{{ '::Actions' | abpLocalization }}
+              </button>
+              <div ngbDropdownMenu>
+                <button ngbDropdownItem (click)="editBook(row.id)">
+                  {{ '::Edit' | abpLocalization }}
+                </button>
+                <button ngbDropdownItem (click)="delete(row.id)">
+                  {{ '::Delete' | abpLocalization }}
+                </button>
+              </div>
+            </div>
+          </ng-template>
+        </ngx-datatable-column>
         <ngx-datatable-column [name]="'::Name' | abpLocalization" prop="name"></ngx-datatable-column>
         <ngx-datatable-column [name]="'::Type' | abpLocalization" prop="type">
           <ng-template let-row="row" ngx-datatable-cell-template>
@@ -40,8 +65,8 @@
 
   <abp-modal [(visible)]="isModalOpen">
     <ng-template #abpHeader>
-      <h3>{{ '::NewBook' | abpLocalization }}</h3>
-    </ng-template>
+      <h3>{{ (selectedBook.id ? '::Edit' : '::NewBook' ) | abpLocalization }}</h3>
+  </ng-template>
 
     <ng-template #abpBody>
       <form [formGroup]="form" (ngSubmit)="save()">
